fixed pictures visibility in card section, project completed

--- a/airbnb-experiences-clone/src/style.css
+++ b/airbnb-experiences-clone/src/style.css
@@ -70,6 +70,7 @@ section {
   width: 100%;
   border-radius: 9px;
   margin-bottom: 9px;
+  height: 233px;
 }
 
 .card--title {
